--- a/SPC560Pxx_RLA STM Test Application for Discovery/Makefile
+++ b/SPC560Pxx_RLA STM Test Application for Discovery/Makefile
@@ -123,7 +123,7 @@ $(BUILDDIR) $(OBJDIR) $(DEPDIR):
 	mkdir .\build
 	mkdir .\build\obj
 	mkdir .\build\dep
-#	@echo $(LLIBDIR)
+#	@echo $(RULESPATH)
 	
 $(COBJS) : $(OBJDIR)/%.o : %.c 
 	@echo Compiling $(<F)
